Setup header tag buffer